tests/baselines/reference/ArrowFunction1.errors.txt
==== tests/cases/compiler/ArrowFunction1.ts (1 errors) ====
    var v = (a: ) => {
                ~
!!! ArrowFunction1.ts(1,13): error TS1110: Type expected.
       
    };